--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Comments In Js</h1>
+        <h2>Two types of comments</h2>
+        <li>inline comments</li>
+        <li>multiline comments</li>
+        <h1>Data Types&Variables</h1>
+        <h2>Data Types</h2>
+        <li>null,undefined,boolean,string,number,symbol,object</li>
+        <h2>Variables</h2>
+        <li>let,var,const</li>
+        <h1>Difference between declaring and assigning Variables</h1>
+        <h1>Initilizing Variables w/ Assingnment Operator</h1>
+        <h2>Adding two numbers</h2>
+        <h2>Subtract two numbers</h2>
+        <h2>multiply two numbers</h2>
+        <h2>Divide two numbers</h2>
+        <h2>Concatinating string with plus operator</h2>
+        <h2>finding length of string</h2>
+
     <h1>Array</h1>
     <h3>push</h3>
     <h3>pop</h3>
@@ -21,5 +39,6 @@
     <h1>equality operator == is also type conversion operator it converts string into number</h1>
     <h2>!= Not Equal operator</h2>
     <h1>equal and greater than and eqaual and lesser than operators </h1>
+    <h1>If else</h1>
 </body>
 </html>
