--- a/index.html
+++ b/index.html
@@ -40,5 +40,14 @@
     <h2>!= Not Equal operator</h2>
     <h1>equal and greater than and eqaual and lesser than operators </h1>
     <h1>If else</h1>
+    <h1>Switch statement</h1>
+    <h1>Default Switch statement</h1>
+    <h2>returninrg boolean values from function</h2>
+    <h1>javaScript Object</h1>
+    <h2>changing object values</h2>
+    <h2>Adding object</h2>
+    <h2>Deleting properties from object</h2>
+    <h2>Check Proprty In object</h2>
+    
 </body>
 </html>
