--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
     <h2>Adding object</h2>
     <h2>Deleting properties from object</h2>
     <h2>Check Proprty In object</h2>
+    <h1> Loop</h1>
+    <h2>while loop</h2>
+    <h2>for loop</h2>
+    <h2>even number with for loop</h2>
+    <h2>odd number with for loop</h2>
+    <h2>count backward numbers</h2>
     
 </body>
 </html>
