--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <h2>even number with for loop</h2>
     <h2>odd number with for loop</h2>
     <h2>count backward numbers</h2>
+    <h2>Mutate an array declared with const</h2>
     
 </body>
 </html>
