--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <h2>odd number with for loop</h2>
     <h2>count backward numbers</h2>
     <h2>Mutate an array declared with const</h2>
+    <h1>Arrow Function</h1>
     
 </body>
 </html>
