--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <h2>count backward numbers</h2>
     <h2>Mutate an array declared with const</h2>
     <h1>Arrow Function</h1>
-    
+    <h2>paresInt Function in Js</h2>
+    <h2> write higher order arrow function</h2>
+    <h2>Object destructring </h2>
+    <h2>destructring  nested assignments</h2>
 </body>
 </html>
