--- a/index.html
+++ b/index.html
@@ -60,5 +60,9 @@
     <h2> write higher order arrow function</h2>
     <h2>Object destructring </h2>
     <h2>destructring  nested assignments</h2>
+    <h1>template literals</h1>
+    <h2>write concise object literal declarations using simple fields</h2>
+    <h2>use class syntax to define a constructor function</h2>
+
 </body>
 </html>
