--- a/index.html
+++ b/index.html
@@ -64,5 +64,17 @@
     <h2>write concise object literal declarations using simple fields</h2>
     <h2>use class syntax to define a constructor function</h2>
 
+    <h1>Local Scope vs Global Scope</h1>
+    <h2>Local Scope</h2>
+    <li>
+         local scope means (block Scope and Functional Scope)</li>
+        <li> accessible only in functional scope or inside the function</li>
+        <li> let, Const are the local scope(block,functional scope)         
+    </li>
+    <h2>Global Scope</h2>
+    <li>
+        accessible everywhere in the code</li> 
+        <li> we can access it inside the function or outside the function</li>
+    
 </body>
 </html>
